# process-gpt-generic-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_knowledge_tasks.py  test_knowledge_tool.py
config/: agents.yaml  knol_task.yaml  mcp.json
scripts/: initialize_agent_knowledge.py
src/: callback.py  crew_config_manager.py  main.py
src/landing_page_generator/: crew.py
src/tools/: __init__.py  browser_tools.py  file_tools.py  knowledge_tool.py  mem_zero_tool.py  search_tools.py  template_tools.py
